@@ -29,6 +29,7 @@ namespace DOM {
 
 class DOMString;
 class CSSStyleDeclarationImpl;
+class HTMLFormElementImpl;
 
 class HTMLElementImpl : public ElementImpl
 {
@@ -40,7 +41,7 @@ public:
     virtual bool isHTMLElement() const { return true; }
 
     virtual bool isInline() const;
-    
+     
     virtual Id id() const = 0;
 
     virtual void parseAttribute(AttributeImpl *token);
