@@ -1,5 +1,16 @@
 2002-11-25  David Hyatt  <hyatt@apple.com>
 
+	Fix for 3025963.  Ensure that KJS looks for the form on the
+	element itself when pushing it onto the scope chain, since
+	the <form> may not be an ancestor of the element.
+	
+        * khtml/ecma/kjs_html.cpp:
+        (getForm):
+        (KJS::HTMLElement::pushEventHandlerScope):
+        * khtml/html/html_elementimpl.h:
+
+2002-11-25  David Hyatt  <hyatt@apple.com>
+
 	Fix for 3020493, another fun little margin collapsing quirk
 	that I missed. (<td><div><p>).  The <div> has to pick up the quirk
 	from the <p> so that the margins of the <p> still get collapsed
